Fix scrollbar for Valhalla theme

--- a/app/javascript/styles/valhalla.scss
+++ b/app/javascript/styles/valhalla.scss
@@ -32,7 +32,7 @@ $ui-transparent-yet-color: #1b1b1be6; //lighter and less transparent
 }
 
 html {
-  scrollbar-color: $ui-base-color rgb(16, 16, 28);
+  scrollbar-width: none;
 }
 
 .muted {
